--- a/WebContent/css/login_bs.css
+++ b/WebContent/css/login_bs.css
@@ -10,7 +10,7 @@ body {
 	background-attachment: fixed;
 }
 
-.panel-default {
+.card-alignment {
 	margin-top: 20%;
 	align-content: center;
 	width: 30%;
