--- a/WebContent/css/signup_bs.css
+++ b/WebContent/css/signup_bs.css
@@ -1,7 +1,8 @@
-.panel-default {
-	margin-top: 15%;
+.card-alignment {
+	margin-top: 17%;
 	align-content: center;
-	width: 500px;
+	width: 30%;
+	min-width: 350px;
 	background-color: powderblue;
 }
 
